nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: nginx.pod.bfmio.com
    http:
      paths:
      - path: /vmap/
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /cache/
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /adpod/
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /track/
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /health/
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /rtb/
        backend:
          serviceName: nginx
          servicePort: 80
      # If not the adpod service, then go to the old infra
      - path: /
        backend:
          serviceName: old-infra
          servicePort: 80
